--- a/index.html
+++ b/index.html
@@ -1,66 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Weekly Schedule Generator</title>
-<style>
-body { font-family: Arial, sans-serif; margin: 20px; }
-input, select { margin: 5px; padding: 5px; }
-table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-th, td { border: 1px solid #aaa; padding: 8px; text-align: center; }
-th { background: #f0f0f0; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weekly Schedule Generator</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100 min-h-screen flex flex-col items-center p-4 sm:p-6">
+    <div class="w-full max-w-4xl bg-white rounded-lg shadow-lg p-6">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Weekly Schedule Generator</h2>
 
-<h2>Weekly Schedule Generator</h2>
+        <div class="flex flex-col sm:flex-row gap-4 mb-6 justify-center">
+            <div class="flex flex-col">
+                <label class="text-sm font-medium text-gray-700 mb-1">Tuition Start</label>
+                <input type="time" id="tuitionStart" value="16:00" 
+                       class="border border-gray-300 rounded-md p-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            </div>
+            <div class="flex flex-col">
+                <label class="text-sm font-medium text-gray-700 mb-1">Tuition End</label>
+                <input type="time" id="tuitionEnd" value="18:00" 
+                       class="border border-gray-300 rounded-md p-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            </div>
+            <div class="flex flex-col">
+                <label class="text-sm font-medium text-gray-700 mb-1">Month</label>
+                <select id="month" class="border border-gray-300 rounded-md p-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                    <option>October</option>
+                    <option>November</option>
+                    <option>December</option>
+                    <option>January</option>
+                    <option>February</option>
+                    <option>March</option>
+                    <option>April</option>
+                </select>
+            </div>
+            <div class="flex items-end">
+                <button onclick="generateSchedule()" 
+                        class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition-colors">
+                    Generate Schedule
+                </button>
+            </div>
+        </div>
 
-<label>Tuition Start (HH:MM):</label>
-<input type="time" id="tuitionStart" value="16:00">
-<label>Tuition End (HH:MM):</label>
-<input type="time" id="tuitionEnd" value="18:00">
-<label>Month:</label>
-<select id="month">
-  <option>October</option>
-  <option>November</option>
-  <option>December</option>
-  <option>January</option>
-  <option>February</option>
-  <option>March</option>
-  <option>April</option>
-</select>
-<button onclick="generateSchedule()">Generate Schedule</button>
+        <div id="scheduleContainer" class="mt-6"></div>
+    </div>
 
-<div id="scheduleContainer"></div>
+    <script>
+    async function generateSchedule() {
+        const tuition_start = document.getElementById('tuitionStart').value;
+        const tuition_end = document.getElementById('tuitionEnd').value;
+        const month = document.getElementById('month').value;
 
-<script>
-async function generateSchedule() {
-  const tuition_start = document.getElementById('tuitionStart').value;
-  const tuition_end = document.getElementById('tuitionEnd').value;
-  const month = document.getElementById('month').value;
+        const res = await fetch('/api/schedule', {
+            method: 'POST',
+            headers: {'Content-Type':'application/json'},
+            body: JSON.stringify({ tuition_start, tuition_end, month })
+        });
 
-  const res = await fetch('/api/schedule', {
-    method: 'POST',
-    headers: {'Content-Type':'application/json'},
-    body: JSON.stringify({ tuition_start, tuition_end, month })
-  });
+        const data = await res.json();
+        const container = document.getElementById('scheduleContainer');
+        container.innerHTML = '';
 
-  const data = await res.json();
-  const container = document.getElementById('scheduleContainer');
-  container.innerHTML = '';
-
-  for(const [day, tasks] of Object.entries(data.weeklySchedule)) {
-    container.innerHTML += `<h3>${day}</h3>`;
-    let table = `<table><tr><th>Task</th><th>Start</th><th>End</th><th>Subject</th></tr>`;
-    tasks.forEach(t => {
-      table += `<tr><td>${t.task}</td><td>${t.start}</td><td>${t.end}</td><td>${t.subject||''}</td></tr>`;
-    });
-    table += '</table>';
-    container.innerHTML += table;
-  }
-}
-</script>
-
+        for(const [day, tasks] of Object.entries(data.weeklySchedule)) {
+            container.innerHTML += `
+                <h3 class="text-lg font-semibold text-gray-800 mt-4 mb-2">${day}</h3>
+                <div class="overflow-x-auto">
+                    <table class="w-full border-collapse bg-white rounded-md shadow-sm">
+                        <thead>
+                            <tr class="bg-gray-200">
+                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">Task</th>
+                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">Start</th>
+                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">End</th>
+                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">Subject</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            ${tasks.map(t => `
+                                <tr class="hover:bg-gray-50">
+                                    <td class="border border-gray-300 p-3 text-gray-600">${t.task}</td>
+                                    <td class="border border-gray-300 p-3 text-gray-600">${t.start}</td>
+                                    <td class="border border-gray-300 p-3 text-gray-600">${t.end}</td>
+                                    <td class="border border-gray-300 p-3 text-gray-600">${t.subject||''}</td>
+                                </tr>
+                            `).join('')}
+                        </tbody>
+                    </table>
+                </div>
+            `;
+        }
+    }
+    </script>
 </body>
 </html>
