--- a/index.html
+++ b/index.html
@@ -1,93 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Schedule Generator</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Daily Schedule Generator</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col items-center p-4 sm:p-6">
-    <div class="w-full max-w-4xl bg-white rounded-lg shadow-lg p-6">
-        <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Weekly Schedule Generator</h2>
+<body class="bg-gray-100 text-gray-800 font-sans">
+  <div class="max-w-7xl mx-auto p-4">
+    <h1 class="text-2xl md:text-4xl font-bold text-center mb-6">Daily Schedule Generator</h1>
 
-        <div class="flex flex-col sm:flex-row gap-4 mb-6 justify-center">
-            <div class="flex flex-col">
-                <label class="text-sm font-medium text-gray-700 mb-1">Tuition Start</label>
-                <input type="time" id="tuitionStart" value="16:00" 
-                       class="border border-gray-300 rounded-md p-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-            </div>
-            <div class="flex flex-col">
-                <label class="text-sm font-medium text-gray-700 mb-1">Tuition End</label>
-                <input type="time" id="tuitionEnd" value="18:00" 
-                       class="border border-gray-300 rounded-md p-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-            </div>
-            <div class="flex flex-col">
-                <label class="text-sm font-medium text-gray-700 mb-1">Month</label>
-                <select id="month" class="border border-gray-300 rounded-md p-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-                    <option>October</option>
-                    <option>November</option>
-                    <option>December</option>
-                    <option>January</option>
-                    <option>February</option>
-                    <option>March</option>
-                    <option>April</option>
-                </select>
-            </div>
-            <div class="flex items-end">
-                <button onclick="generateSchedule()" 
-                        class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition-colors">
-                    Generate Schedule
-                </button>
-            </div>
+    <div class="bg-white rounded-lg shadow p-4 md:p-6 mb-6">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+        <div>
+          <label class="block font-semibold mb-1">Select Day</label>
+          <select id="day" class="w-full border rounded px-2 py-1">
+            <option>Monday</option>
+            <option>Tuesday</option>
+            <option>Wednesday</option>
+            <option>Thursday</option>
+            <option>Friday</option>
+            <option>Saturday</option>
+            <option>Sunday</option>
+          </select>
         </div>
-
-        <div id="scheduleContainer" class="mt-6"></div>
+        <div>
+          <label class="block font-semibold mb-1">Month</label>
+          <select id="month" class="w-full border rounded px-2 py-1">
+            <option>October</option>
+            <option>November</option>
+            <option>December</option>
+            <option>January</option>
+            <option>February</option>
+            <option>March</option>
+            <option>April</option>
+          </select>
+        </div>
+        <div>
+          <label class="block font-semibold mb-1">College?</label>
+          <select id="college" class="w-full border rounded px-2 py-1">
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+          </select>
+        </div>
+        <div>
+          <label class="block font-semibold mb-1">Tuition Start</label>
+          <input type="time" id="tuitionStart" class="w-full border rounded px-2 py-1" value="16:00">
+        </div>
+        <div>
+          <label class="block font-semibold mb-1">Tuition End</label>
+          <input type="time" id="tuitionEnd" class="w-full border rounded px-2 py-1" value="18:00">
+        </div>
+      </div>
+      <button onclick="generateSchedule()" class="mt-4 w-full md:w-auto bg-blue-600 hover:bg-blue-700 text-white font-bold px-4 py-2 rounded transition">Generate Schedule</button>
     </div>
 
-    <script>
+    <div id="scheduleContainer"></div>
+  </div>
+
+  <script>
     async function generateSchedule() {
-        const tuition_start = document.getElementById('tuitionStart').value;
-        const tuition_end = document.getElementById('tuitionEnd').value;
-        const month = document.getElementById('month').value;
+      const day = document.getElementById('day').value;
+      const month = document.getElementById('month').value;
+      const college = document.getElementById('college').value === 'true';
+      const tuition_start = document.getElementById('tuitionStart').value;
+      const tuition_end = document.getElementById('tuitionEnd').value;
 
-        const res = await fetch('/api/schedule', {
-            method: 'POST',
-            headers: {'Content-Type':'application/json'},
-            body: JSON.stringify({ tuition_start, tuition_end, month })
-        });
+      const res = await fetch('/api/schedule', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ day, month, college, tuition_start, tuition_end })
+      });
 
-        const data = await res.json();
-        const container = document.getElementById('scheduleContainer');
-        container.innerHTML = '';
+      const data = await res.json();
+      const container = document.getElementById('scheduleContainer');
+      container.innerHTML = '';
 
-        for(const [day, tasks] of Object.entries(data.weeklySchedule)) {
-            container.innerHTML += `
-                <h3 class="text-lg font-semibold text-gray-800 mt-4 mb-2">${day}</h3>
-                <div class="overflow-x-auto">
-                    <table class="w-full border-collapse bg-white rounded-md shadow-sm">
-                        <thead>
-                            <tr class="bg-gray-200">
-                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">Task</th>
-                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">Start</th>
-                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">End</th>
-                                <th class="border border-gray-300 p-3 text-sm font-medium text-gray-700">Subject</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            ${tasks.map(t => `
-                                <tr class="hover:bg-gray-50">
-                                    <td class="border border-gray-300 p-3 text-gray-600">${t.task}</td>
-                                    <td class="border border-gray-300 p-3 text-gray-600">${t.start}</td>
-                                    <td class="border border-gray-300 p-3 text-gray-600">${t.end}</td>
-                                    <td class="border border-gray-300 p-3 text-gray-600">${t.subject||''}</td>
-                                </tr>
-                            `).join('')}
-                        </tbody>
-                    </table>
-                </div>
-            `;
-        }
+      container.innerHTML += `<h2 class="text-xl md:text-2xl font-bold mb-2 text-center">${data.day} Schedule</h2>`;
+
+      let table = `<div class="overflow-x-auto"><table class="min-w-full border border-gray-300 rounded-lg overflow-hidden text-sm md:text-base">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="px-2 md:px-4 py-2 border-b">Task</th>
+            <th class="px-2 md:px-4 py-2 border-b">Start</th>
+            <th class="px-2 md:px-4 py-2 border-b">End</th>
+            <th class="px-2 md:px-4 py-2 border-b">Subject</th>
+            <th class="px-2 md:px-4 py-2 border-b">Note</th>
+          </tr>
+        </thead>
+        <tbody>`;
+
+      data.schedule.forEach(task => {
+        table += `<tr class="even:bg-gray-50">
+          <td class="px-2 md:px-4 py-1 border-b">${task.task}</td>
+          <td class="px-2 md:px-4 py-1 border-b">${task.start}</td>
+          <td class="px-2 md:px-4 py-1 border-b">${task.end}</td>
+          <td class="px-2 md:px-4 py-1 border-b">${task.subject || ''}</td>
+          <td class="px-2 md:px-4 py-1 border-b">${task.note || ''}</td>
+        </tr>`;
+      });
+
+      table += '</tbody></table></div>';
+      container.innerHTML += table;
     }
-    </script>
+  </script>
 </body>
 </html>
